add version of piecewiseSEM to README

--- a/README.html
+++ b/README.html
@@ -125,6 +125,7 @@ $(document).ready(function () {
 <h2>Code to support analyses in:</h2>
 <p>Authors: Craven, D., N. Eisenhauer, W.D. Pearse, Y. Hautier, F.Isbell,C. Roscher, M. Bahn, C. Beierkuhnlein, G. Bönisch, N. Buchmann, C. Byun, J.A. Catford, B.E.L. Cerabolini, J.H.C. Cornelissen, J.M. Craine, E. De Luca, A. Ebeling, J.N. Griffin, A. Hector, J. Hines, A. Jentsch, J.Kattge, J. Kreyling, V. Lanta, N. Lemoine, S.T. Meyer, V. Minden, V. Onipchenko, H.W. Polley, P.B. Reich, J. van Ruijven, B. Schamp, M.D. Smith, N.A. Soudzilovskaia, D. Tilman, A. Weigelt, B. Wilsey, and P. Manning. 2018. <strong>Multiple facets of biodiversity drive the diversity-stability relationship</strong>. <em>Nature Ecology &amp; Evolution</em> In revision.</p>
 <p><strong>Data is currently available upon request. Please send an e-mail to:</strong> <a href="mailto:dylan.craven@aya.yale.edu">dylan.craven@aya.yale.edu</a></p>
+<p><strong>Please note that we used version 1 of <a href="https://cran.r-project.org/web/packages/piecewiseSEM/vignettes/piecewiseSEM.html#comparing-package-versions">‘piecewiseSEM’</a> was used for all analyses; version 2 of ‘piecewiseSEM’ was updated on June 11, 2018</strong></p>
 </div>
 <div id="table-of-contents" class="section level2">
 <h2>Table of Contents</h2>
